<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.DescriptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_700"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llContent"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/imgBookImage"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:contentDescription="@string/image"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">

                    <TextView
                        android:id="@+id/txtBookName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/name_of_the_book"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtBookAuthor"
                        android:layout_width="185dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtBookName"
                        android:padding="8dp"
                        android:text="@string/name_of_the_author"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtBookPrice"
                        android:layout_width="185dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtBookAuthor"
                        android:padding="8dp"
                        android:text="@string/rs_299"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1.2">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_ratings"
                        android:contentDescription="@string/ratings_icon" />
                    <TextView
                        android:id="@+id/txtBookRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:drawablePadding="4dp"
                        android:padding="4dp"
                        android:text="@string/_4_5"
                        android:textColor="@color/yellow"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/llContent">

                <TextView
                    android:id="@+id/txtAboutTheBookStatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:padding="6dp"
                    android:text="@string/about_the_book"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtBookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtAboutTheBookStatic"
                    android:padding="6dp"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/teal_700"
        android:text="@string/add_to_favourites"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold" />

</RelativeLayout>