<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="6dp"
    android:background="@color/white"
    android:orientation="horizontal"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="6">

        <!--The weight sum property is used to divide the layout into
        different parts and then giving each layout a particular weight
        gives it that amount of space on the screen-->


        <!--Since each parent layout will have a specific weight, we need
        not give any width to those layout-->

        <ImageView
            android:id="@+id/imgBookImage"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1.5"
            android:contentDescription="@string/image"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3">

            <TextView
                android:id="@+id/txtBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/name_of_the_book"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtBookName"
                android:padding="8dp"
                android:text="@string/name_of_the_author"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtBookPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtBookAuthor"
                android:layout_alignParentBottom="true"
                android:padding="8dp"
                android:text="@string/rs_299"
                android:textColor="@color/green"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <!--Many times we see that texts have an image along with them to
        their right or left. This is added with the help of the
        drawableLeft (or drawableRight and so on) attribute-->

        <TextView
            android:id="@+id/txtBookRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:drawablePadding="4dp"
            android:padding="4dp"
            android:text="@string/_4_5"
            android:textColor="@color/yellow"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_ratings">

        </TextView>

    </LinearLayout>
</androidx.cardview.widget.CardView>
